log
Thu 09 May 2024 03:04:35 PM UTC: 
 tests:  1|8
total_score: 0/70
279d065
Thu 09 May 2024 03:07:40 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
f8726c5
Thu 09 May 2024 03:14:31 PM UTC: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:51: error: expected ‘)’ before ‘{’ token
   80 |             if(is_equal(tree, key, aux->pair->key)
      |               ~                                   ^
      |                                                   )
   81 |             {
      |             ~                                      
treemap.c:96:9: error: expected expression before ‘}’ token
   96 |         }
      |         ^
Compilation failed
bf8520f
Thu 09 May 2024 03:14:44 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
a26fcb5
Thu 09 May 2024 03:23:05 PM UTC: 
 treemap.c | 39 +++++++++++++++++++++++++++++++++++++--
 1 file changed, 37 insertions(+), 2 deletions(-)
 tests:  12|6
total_score: 15/70
bd56c53
Thu 09 May 2024 03:24:23 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  12|6
total_score: 15/70
6fc24f1
Thu 09 May 2024 03:25:45 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
25afe85
Thu 09 May 2024 03:27:54 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 30/70
784a84e
Sun 12 May 2024 07:35:58 PM UTC: 
 tests:  15|4
total_score: 30/70
9749ebe
Sun 12 May 2024 07:41:20 PM UTC: 
 treemap.c | 79 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 74 insertions(+), 5 deletions(-)
 tests:  0|0
73476ad
Sun 12 May 2024 07:49:51 PM UTC: 
 treemap.c | 59 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 56 insertions(+), 3 deletions(-)
 tests:  0|0
b9789bc
Mon 13 May 2024 03:17:37 AM UTC: 
 treemap.c | 45 +++------------------------------------------
 1 file changed, 3 insertions(+), 42 deletions(-)
 tests:  0|0
a2bf973
Mon 13 May 2024 03:19:47 AM UTC: 
 treemap.c | 45 ++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 40 insertions(+), 5 deletions(-)
 tests:  0|0
56cc2f1
Mon 13 May 2024 03:21:02 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
0664c74
Mon 13 May 2024 03:26:02 AM UTC: 
 treemap.c | 19 +++++--------------
 1 file changed, 5 insertions(+), 14 deletions(-)
 tests:  0|0
8276907
Mon 13 May 2024 03:26:15 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
aec7769
Mon 13 May 2024 03:29:38 AM UTC: 
 treemap.c | 49 +++++++++++++++++++------------------------------
 1 file changed, 19 insertions(+), 30 deletions(-)
 tests:  0|0
0bb002d
